# rust_backend_api_diesel_pg

./: .env  Cargo.toml  README.md  rust-actix-web-rest-api.postman_collection.json
migrations/2022-10-20-180303_create_employees/: up.sql
scripts/: init_db.sh
src/: db.rs  error_handler.rs  main.rs
src/employees/: model.rs  routes.rs
