[package]
name = "employee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "3.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
# manages env vars
dotenv = "0.11"
env_logger = "0.6"
# static code is executed at runtime in order to be initialized
lazy_static = "1.4"
# restarts server when changes are detected
listenfd = "0.3"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
